--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@ font-size: 4vw;
 font-weight: bold;
 }
 
+pre {
+font-family: 'Indie Flower', cursive;
+}
+
 a {
 font-size: 4vw;
 color: #f8d2bb;
